Resolved gh #841